logs/django_errors.log
Internal Server Error: /students/export/rmib-csv/
Traceback (most recent call last):
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\contrib\auth\decorators.py", line 23, in _wrapper_view
    return view_func(request, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\students\views.py", line 3434, in export_rmib_results_csv
    if hasattr(student, 'rmib_result') and student.rmib_result.scores:
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'RMIBResult' object has no attribute 'scores'
"GET /students/export/rmib-csv/? HTTP/1.1" 500 87928
Internal Server Error: /students/export/rmib-csv/
Traceback (most recent call last):
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\contrib\auth\decorators.py", line 23, in _wrapper_view
    return view_func(request, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\students\views.py", line 3434, in export_rmib_results_csv
    if hasattr(student, 'rmib_result') and student.rmib_result.scores:
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'RMIBResult' object has no attribute 'scores'
"GET /students/export/rmib-csv/? HTTP/1.1" 500 87928
Internal Server Error: /accounts/login/
Traceback (most recent call last):
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\base.py", line 505, in parse
    compile_func = self.tags[command]
                   ~~~~~~~~~^^^^^^^^^
KeyError: 'static'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\core\handlers\base.py", line 220, in _get_response
    response = response.render()
               ^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\response.py", line 111, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\response.py", line 87, in rendered_content
    template = self.resolve_template(self.template_name)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\response.py", line 69, in resolve_template
    return select_template(template, using=self.using)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\loader.py", line 42, in select_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\backends\django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\engine.py", line 175, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\engine.py", line 157, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
           ^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\base.py", line 200, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\base.py", line 507, in parse
    self.invalid_block_tag(token, command, parse_until)
  File "C:\Kuliah Fauzan\Start Up\Project\PsikologiMTS1\PsikologiMTS1\.venv\Lib\site-packages\django\template\base.py", line 568, in invalid_block_tag
    raise self.error(
django.template.exceptions.TemplateSyntaxError: Invalid block tag on line 17: 'static'. Did you forget to register or load this tag?
"GET /accounts/login/ HTTP/1.1" 500 176431
